# samuelizer

./: .env.test  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  cli.py  download-slack-channel.py  meeting_minutes.py  poetry run cli-agent --help  pyproject.toml
docs/: api.md  architecture.md  examples.md
src/: cli.py  controller.py  interfaces.py
src/audio_capture/: system_audio.py
src/config/: config.py  providers.py
src/exporters/: file_writer.py  json_exporter.py
src/models/: local_adapter.py  model_factory.py  openai_adapter.py
src/slack/: channel_lister.py  download_slack_channel.py  exceptions.py  filters.py  http_client.py  message_processor.py  pagination.py  user_cache.py  utils.py
src/transcription/: audio_processor.py  cache.py  exceptions.py  meeting_analyzer.py  meeting_minutes.py  meeting_transcription.py  templates.py  text_preprocessor.py
src/transcription/tests/: test_cache.py
src/utils/: audio_extractor.py  audio_optimizer.py  logging_utils.py
tests/: quick_test.py  run_all_commands.py  run_tests.sh  run_tests_no_deps.sh  test_cli.py  test_commands.py  test_slack_commands.py  test_transcription.py
