[tool.poetry]
name = "samuelizer"
version = "0.1.0"
description = "AI Agent for summarizing Slack Channels, Threads, Meets..."
authors = ["ajerez <ajerez@freepik.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
openai = "^1.3.0"
python-docx = "^1.0.0"
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"
pyyaml = "^6.0.1"
click = "^8.1.3"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.10.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli-agent = "src.cli:cli"
download-slack = "src.slack.download_slack_channel:main"
transcribe-meeting = "src.transcription.meeting_minutes:main"
