[tool.poetry]
name = "samuelizer"
version = "1.1.0"
description = "AI Agent for summarizing Slack Channels, Threads, Meets..."
authors = ["ajerez <pobreiluso@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
openai = "^1.3.0"
python-docx = "^1.0.0"
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"
pyyaml = "^6.0.1"
click = "^8.1.3"
tqdm = "^4.66.1"
pyaudio = "^0.2.14"
sounddevice = "^0.4.6"
numpy = "^1.26.3"
openai-whisper = {version = "^20231117", optional = true}
transformers = {version = "^4.35.2", optional = true}
torch = {version = "^2.1.1", optional = true}
sentencepiece = {version = "^0.1.99", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.10.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
isort = "^5.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
samuelize = "src.cli:cli"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=src --cov-report=term-missing"
[tool.poetry.extras]
local_models = ["torch", "openai-whisper", "transformers", "sentencepiece"]
